Added DB Error Message, Edited Error Message, Added no space to user requirements, Finished user stats queries, Finished every transaction DB table creation queries, Added new setting to ini

--- a/Projects/ATM using MySQL/atm_details.ini
+++ b/Projects/ATM using MySQL/atm_details.ini
@@ -16,3 +16,5 @@ Max_Username_Length = 16
 Required_PIN_Length = 6
 # Default name of the table created to hold all user account data
 Account_Table_Name = account
+# Default name of the table created to hold every user transaction
+Every_Transaction_Table_Name = every_transaction
