Added documentation, moved around code, etc.

--- a/Projects/ATM using MySQL/atm_details.ini
+++ b/Projects/ATM using MySQL/atm_details.ini
@@ -14,7 +14,5 @@ Min_Username_Length = 4
 Max_Username_Length = 16
 # PIN required number of digits
 Required_PIN_Length = 6
-# Default name of the table created to hold all user account data
-Account_Table_Name = account
-# Default name of the table created to hold every user transaction
-Every_Transaction_Table_Name = every_transaction
+# Default maximum number of transactions returned
+Default_Max_Transactions_Num = 30
